<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jamKerja" />

    <EditText
        android:id="@+id/edt_jamKerja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/btn_hitungGaji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitungGaji" />

    <TextView
        android:id="@+id/tv_result_gaji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengeluaran" />

    <EditText
        android:id="@+id/edt_pengeluaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/btn_hitungPengeluaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitungPengeluaran" />

    <TextView
        android:id="@+id/tv_result_pengeluaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>